package com.csl.decorator;

/**
 * @author MaoLongLong
 */
public abstract class Component {

    public abstract void operation();
}
